# chemsim

./: .gitignore  Dockerfile
backend/: pyproject.toml
backend/chemsim_api/: main.py  store.py
backend/chemsim_api/models/: schemas.py
backend/chemsim_api/routers/: ai_generate.py  calculations.py  molecules.py  ws.py
backend/chemsim_api/services/: ai_generate.py  computation.py  dft_computation.py  dft_runner.py
engine/: CMakeLists.txt
engine/bindings/python/: bindings.cpp
engine/data/test_molecules/: benzene.xyz  ethanol.xyz  methane.xyz  water.xyz
engine/include/chemsim/core/: element_data.h  molecule.h
engine/include/chemsim/ff/: uff_energy.h  uff_params.h  uff_typing.h
engine/include/chemsim/io/: sdf_parser.h  xyz_parser.h
engine/include/chemsim/opt/: optimizer.h
engine/src/core/: element_data.cpp  molecule.cpp
engine/src/ff/: uff_energy.cpp  uff_params.cpp  uff_typing.cpp
engine/src/io/: sdf_parser.cpp  xyz_parser.cpp
engine/src/opt/: optimizer.cpp
engine/tests/: test_element_data.cpp  test_molecule.cpp  test_optimizer.cpp  test_uff.cpp  test_xyz_parser.cpp
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/CalculationPanel/: CalculationPanel.tsx  DFTResultsPanel.tsx  DFTSettingsPanel.tsx  EnergyChart.tsx  FrequencyPanel.tsx  GeometryReport.tsx  OrbitalSelector.tsx  TrajectorySlider.tsx
frontend/src/components/CommandPalette/: CommandPalette.tsx
frontend/src/components/FileUpload/: FileUpload.tsx
frontend/src/components/MoleculeViewer/: MoleculeScene.ts  MoleculeViewer.tsx  constants.ts  marchingCubes.ts
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/store/: store.ts
scripts/: dev.sh  setup.sh
