[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "chemsim-api"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "openai>=1.0",
    "rdkit>=2023.9",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "pytest-asyncio"]
